labs/server-side-events/k8s/sws.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sws
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sws
  template:
    metadata:
      labels:
        app: sws
    spec:
      containers:
      - name: sws
        image: sws:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sws
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: sws
